--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <p>Hold up 1 to 5 fingers to see our memories</p>
             </div>
 
-            <img id="photo1" class="gallery-photo" src="photo1.jpg" alt="Memory 1">
-            <img id="photo2" class="gallery-photo" src="photo2.jpg" alt="Memory 2">
-            <img id="photo3" class="gallery-photo" src="photo3.jpg" alt="Memory 3">
-            <img id="photo4" class="gallery-photo" src="photo4.jpg" alt="Memory 4">
-            <img id="photo5" class="gallery-photo" src="photo5.jpg" alt="Memory 5">
+            <img id="photo1" class="gallery-photo" src="photo1.jpeg" alt="Memory 1">
+            <img id="photo2" class="gallery-photo" src="photo2.jpeg" alt="Memory 2">
+            <img id="photo3" class="gallery-photo" src="photo3.jpeg" alt="Memory 3">
+            <img id="photo4" class="gallery-photo" src="photo4.jpeg" alt="Memory 4">
+            <img id="photo5" class="gallery-photo" src="photo5.jpeg" alt="Memory 5">
         </div>
     </div>
 
@@ -34,4 +34,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
