Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="canvas-container"></div>
 
     <div class="ui-overlay">
-        <div id="anniversary-letter" class="letter-box active">
+        <div id="anniversary-letter" class="letter-box">
             <p style="white-space: pre-line; text-align: left; line-height: 1.8;">
                 給我最愛的小廢廢:
 
